style: adjust login and register pages to prevent layout shift on error message

--- a/frontend/src/assets/styles/login.css
+++ b/frontend/src/assets/styles/login.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 .form-login {
   display: flex;
@@ -29,6 +29,10 @@
 .title-login p {
   font-weight: 500;
   font-size: 16pt;
+}
+
+.login-error {
+  height: 15px;
 }
 
 .form-login input {
