--- a/frontend/src/assets/styles/register.css
+++ b/frontend/src/assets/styles/register.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   order: 2;
 }
 .form-register {
@@ -30,6 +30,10 @@
 .title-register p {
   font-weight: 500;
   font-size: 16pt;
+}
+
+.register-error {
+  height: 15px;
 }
 
 .form-register input {
